# Jupiter

./: .gitignore  README.md  changelog.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
docs/: BUG_HUNT_REPORT.md  DEDUP_ARCHITECTURE.md  DUPLICATE_HANDLER_PORT_ANALYSIS.md  GOOGLE_DRIVE_SETUP.md  PRODUCT_STRATEGY.md  REQUIREMENTS_COVERAGE.md  RESEARCH_100_VERIFICATION_FACTORS.md  RESEARCH_VERIFICATION_FACTORS_ROUND2.md  RUNTIME_DIAGNOSIS.md  UX_PREFERENCES_GAP.md
gradle/: libs.versions.toml
growth_strategy/: AI_INSTRUCTIONS.md  README.md  _fonts.py  generate_growth_pdf.py  generate_valuation_pdf.py  render_growth_md.py  scan_repo.py
ultimate-duplicate-handler/: codingLessonsLearnt.md  desktop.ini
ultimate-duplicate-handler/app/src-tauri/: Cargo.toml  tauri.conf.json
ultimate-duplicate-handler/app/src-tauri/capabilities/: default.json
ultimate-duplicate-handler/app/src-tauri/examples/: mint_license.rs
ultimate-duplicate-handler/app/src-tauri/icons/: icon.icns
ultimate-duplicate-handler/app/src-tauri/migrations/: 0001_init.sql  0002_folders.sql  0003_scan_history.sql  0004_image_hash.sql  0005_media_meta.sql  0006_video_hash.sql
ultimate-duplicate-handler/app/src-tauri/src/: commands.rs  lib.rs  main.rs  model.rs  paths.rs  update.rs
ultimate-duplicate-handler/app/src-tauri/src/db/: mod.rs  repo.rs
ultimate-duplicate-handler/app/src-tauri/src/engine/: actions.rs  bookmarks.rs  deletion_service.rs  dupfolder.rs  hashing.rs  identity.rs  imagehash.rs  license.rs  mediaprobe.rs  mod.rs  ntfs.rs  pathkey.rs  rename_service.rs  reports.rs  restore_service.rs  safety.rs  scan_service.rs  scheduler.rs  selection.rs  walker.rs
versioning/: 260701_12_v0.11.0_device-simulation-always-on.md  260701_13_v0.12.0_abi-aware-install.md  260701_13_v0.12.0_ai-dev-prompt.md  260701_14_v0.13.0_exhaustive-crawler.md  260701_15_v0.10.0_ai-dev-prompt.md  260701_15_v0.10.0_dualpane-dnd-quality.md  260701_16_v0.11.0_ai-dev-prompt.md  260701_16_v0.11.0_file-indexing.md  260701_17_v0.12.0_dup-hash-reuse.md  260701_18_v0.13.0_ai-dev-prompt.md  260701_18_v0.13.0_recycle-bin.md  260701_19_v0.14.0_category-browser.md  260702_20_v0.15.0_trust-and-enforced-tests.md  260702_21_v0.16.0_research-round2.md  260702_22_v0.17.0_drag-pack-liveindex.md  260702_23_v0.18.0_compress-widget-albums.md  260702_24_v0.19.0_thumbnails-compress-dedup-merge.md  260704_25_v0.20.0_droptarget-cleanup-autoindex.md  260704_26_v0.21.0_cleanup-collapse-affordance.md  260705_27_v0.22.0_index-backed-analytics.md  260705_28_v0.23.0_browser-index-wiring-dup-safety.md  260705_29_v0.24.0_mediastore-fast-indexing.md  260705_30_v0.25.0_index-lifecycle-p0.md  260705_31_v0.26.0_index-state-machine.md  260706_32_v0.30.0_grant-triggers-full-scan.md  260707_33_v0.31.0_app-storage-package-visibility.md  260707_34_v0.32.0_rescan-usability-dup-alerts-app-actions.md  260707_35_v0.33.0_uninstall-notifications-freshness.md  (+41 more)
(+487 files in other folders)
